--- a/aula6-position.html
+++ b/aula6-position.html
@@ -30,5 +30,12 @@
     <div class="whatsapp">
         whatsapp
     </div>
+
+    <div class="background">
+        <img src="./images/img1.jpg" alt=""/>
+        <div class="centro">
+            <h1>Titulo do Artigo</h1>
+        </div>
+    </div>
 </body>
 </html>
