--- a/aula4-display.html
+++ b/aula4-display.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="borda">
-        Meu Primeiro CSS
+        Propriedade Display
     </h1>
 
     <p class="borda" id="p1">
