--- a/aula6-position.html
+++ b/aula6-position.html
@@ -7,7 +7,7 @@
     <title>Aula 6</title>
 </head>
 <body>
-    <h1>Meu Curso CSS</h1>
+    <h1>Propriedade Position</h1>
     <div class="container">
         <div class="div1">conteudo 1</div>
         <div class="div2">conteudo 2</div>
@@ -34,7 +34,8 @@
     <div class="background">
         <img src="./images/img1.jpg" alt=""/>
         <div class="centro">
-            <h1>Titulo do Artigo</h1>
+            <h1 class="card-title">Titulo do Artigo</h1>
+            <p class="card-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo dicta nulla molestias corrupti cupiditate quam nemo in. Sequi earum ducimus, tenetur autem asperiores voluptatibus odio sed ipsam neque laborum molestias.</p>
         </div>
     </div>
 </body>
