--- a/aula2-fontes.html
+++ b/aula2-fontes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        Meu primeiro site com CSS
+        Propriedade Fonts
     </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque cupiditate, perferendis quas, unde harum ea voluptate sequi numquam, aperiam animi minima saepe consequuntur placeat. Aut repellendus qui consequatur eligendi facere.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis tempore rerum voluptatum ipsum laboriosam impedit labore quae, quo consequatur dignissimos neque debitis voluptas sit nulla eius maiores dolorum doloremque tempora!</p>
