--- a/aula5-width-max.html
+++ b/aula5-width-max.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 class="borda">MEU curso CSS</h1>
+    <h1 class="borda">Propriedade width-max</h1>
 
     <div class="ex1 borda-vermelho">
         conteudo com 600px de largura
