--- a/aula8-float.html
+++ b/aula8-float.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style-aula7.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style-aula8.css">
+    <title>Aula 8</title>
 </head>
 <body>
+    <h1>Propriedade Float</h1>
     
+
 </body>
 </html>
