--- a/aula8-float.html
+++ b/aula8-float.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <h1>Propriedade Float</h1>
-    
 
+<ul>
+    <li><a href="http://">Link 1</a></li>
+    <li><a href="http://">Link 2</a></li>
+    <li><a href="http://">Link 3</a></li>
+    <li class="login"><a href="http://">Login</a></li>
+</ul>
+
+    <div class="container">
+        <img src="./images/img2.JPG" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas aperiam repellendus eum sunt velit aliquam cum possimus quidem quibusdam voluptatum porro, ipsum iste architecto, temporibus nihil distinctio vitae, magnam ex.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, in autem placeat corrupti ratione excepturi ad eum ut ipsum vitae iste molestiae totam unde atque eligendi suscipit magni numquam temporibus!</p>
+        <h1 style="clear: both;">Outro conteudo</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit deserunt, laboriosam explicabo impedit aliquam iste. Officiis, rerum nulla nobis cupiditate hic optio veniam repellendus laborum sint reiciendis deleniti inventore quibusdam.</p>
+    </div>
 </body>
 </html>
