--- a/aula15-efeito-texto.html
+++ b/aula15-efeito-texto.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Efeitos de TExto</h1>
+    <div class="caixa">
+        <img src="./images/img2.JPG" alt="" srcset="">
+        <h2 class="reduzido">Noticia 1 exemplo de titulo longo exemplo de titulo longoexemplo de titulo longo</h2>
+        <p class="reduzido">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolorum aspernatur nisi culpa nihil repellat? Illo, quod amet nostrum architecto ad hic explicabo sunt itaque quaerat iusto expedita magni provident?</p>
+    </div>
+
 </body>
 </html>
